Rejigger the project a bit

--- a/stylesheets/corduroy.sass
+++ b/stylesheets/corduroy.sass
@@ -1,10 +1,7 @@
-// Functions
-@import functions/bezier
 @import functions/conversion
 @import functions/coloring
 
 
-// Mixins
 @import mixins/font_face
 @import mixins/layout
 @import mixins/visibility
@@ -12,6 +9,7 @@
 @import mixins/shape
 
 
-// Transitions
-@import transitions/zip
+@import movement/bezier
+@import movement/transition
+@import movement/animation
 
