--- a/stylesheets/mixins/_shape.sass
+++ b/stylesheets/mixins/_shape.sass
@@ -22,6 +22,7 @@
   +shape($width, $height, $_radii)
 
 
+// Map cardinal map points for triangle
 @function _cardinal_mapping($direction)
   @if $direction == north
     @return up
