Directory movement for easier imports

--- a/_corduroy.sass
+++ b/_corduroy.sass
@@ -1,13 +1,13 @@
-@import lib/functions/conversion
-@import lib/functions/coloring
+@import functions/conversion
+@import functions/coloring
 
-@import lib/mixins/font_face
-@import lib/mixins/layout
-@import lib/mixins/visibility
-@import lib/mixins/display
-@import lib/mixins/shape
+@import mixins/font_face
+@import mixins/layout
+@import mixins/visibility
+@import mixins/display
+@import mixins/shape
 
-@import lib/movement/bezier
-@import lib/movement/transition
-@import lib/movement/animation
+@import movement/bezier
+@import movement/transition
+@import movement/animation
 
