Revamp and simplify the functions/mixins in use

--- a/_corduroy.sass
+++ b/_corduroy.sass
@@ -1,13 +1,10 @@
-@import functions/conversion
-@import functions/coloring
+@import functions/bezier
+@import functions/color
+@import functions/measurement
 
+@import mixins/clearfix
 @import mixins/font_face
-@import mixins/layout
-@import mixins/visibility
-@import mixins/display
+@import mixins/movement
 @import mixins/shape
-
-@import movement/bezier
-@import movement/transition
-@import movement/animation
+@import mixins/visibility
 
