--- a/functions/_measurement.sass
+++ b/functions/_measurement.sass
@@ -8,7 +8,7 @@ $context-px: 16 !default
   @return ($px / $context) * 1rem
 
 
-@function unit_less($px, $context:$context-px)
+@function unit-less($px, $context:$context-px)
   @return ($px / $context)
 
 
