--- a/mixins/_font_face.sass
+++ b/mixins/_font_face.sass
@@ -1,15 +1,14 @@
-@mixin font-face($font-family, $file-path, $font-weight:normal, $font-style:normal, $asset-pipeline:false)
+// Borrowed from Thoughtbot's excellent Bourbon library: http://bourbon.io/
+@mixin font-face($family, $file-path, $weight:normal, $style:normal, $pipeline:false)
   @font-face
-    font-family: $font-family
-    font-weight: $font-weight
-    font-style: $font-style
+    font-family: $family
+    font-weight: $weight
+    font-style: $style
 
-    @if $asset-pipeline == true
+    @if $pipeline == true
       src: font-url('#{$file-path}.eot')
-      src: font-url('#{$file-path}.eot?#iefix') format('embedded-opentype'), font-url('#{$file-path}.woff') format('woff'), font-url('#{$file-path}.ttf') format('truetype'), font-url('#{$file-path}.svg##{$font-family}') format('svg')
+      src: font-url('#{$file-path}.eot?#iefix') format('embedded-opentype'), font-url('#{$file-path}.woff') format('woff'), font-url('#{$file-path}.ttf') format('truetype'), font-url('#{$file-path}.svg##{$family}') format('svg')
     @else
       src: url('#{$file-path}.eot')
-      src: url('#{$file-path}.eot?#iefix') format('embedded-opentype'), url('#{$file-path}.woff') format('woff'), url('#{$file-path}.ttf') format('truetype'), url('#{$file-path}.svg##{$font-family}') format('svg')
-
-// Borrowed from Thoughtbot's excellent Bourbon library: http://bourbon.io/
+      src: url('#{$file-path}.eot?#iefix') format('embedded-opentype'), url('#{$file-path}.woff') format('woff'), url('#{$file-path}.ttf') format('truetype'), url('#{$file-path}.svg##{$family}') format('svg')
 
