--- a/snippets/_sticky_footer.sass
+++ b/snippets/_sticky_footer.sass
@@ -1,12 +1,3 @@
-@mixin clearfix
-  &:after
-    content: ""
-    display: table
-    clear: both
-%clearfix
-  +clearfix
-
-
 @mixin sticky-footer($footer-height, $outer:".main", $inner:".content", $footer:".footer")
   html, body
     height: 100%
@@ -34,4 +25,11 @@
   #{$footer}
     margin-top: auto
     height: auto
+
+// Markup Structure:
+
+// %body
+//  %section.main
+//    %div.content
+//  %footer.footer
 
