--- a/snippets/_tab_focus.sass
+++ b/snippets/_tab_focus.sass
@@ -1,3 +1,4 @@
+// Resets the browser style for tab focusable elements
 @mixin tab-focus
   outline: thin dotted
   outline: 5px auto -webkit-focus-ring-color
