Adding overflow_ellipsis to the global import
Also renamed the file to follow the underscore convention

#3

--- a/_corduroy.sass
+++ b/_corduroy.sass
@@ -5,6 +5,7 @@
 @import mixins/clearfix
 @import mixins/font_face
 @import mixins/movement
+@import mixins/overflow_ellipsis
 @import mixins/shape
 @import mixins/visibility
 
