Add vertical-align mixin to manifest and imports

--- a/_corduroy.sass
+++ b/_corduroy.sass
@@ -7,5 +7,6 @@
 @import mixins/movement
 @import mixins/overflow_ellipsis
 @import mixins/shape
+@import mixins/vertical_align
 @import mixins/visibility
 
